--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @font-face {
-  font-family: 'Rea-Regular';
-  src: url('../fonts/Rea-Regular.otf') format('truetype');
+    font-family: 'Rea-Regular';
+    src: url('../fonts/Rea-Regular.otf') format('truetype');
 }
 
 body {
-    background-color: #EDEEC9;
+    background-color: #F7E1D7;
+    color: #37302F;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -17,12 +18,12 @@ body {
     max-width: 1200px;
     width: 100%;
     padding: 2rem;
-    border-radius: 10px; 
+    border-radius: 10px;
 }
 
 .left-column {
     flex: 1;
-    max-width: 350px;
+    width: 50%;
     text-align: left;
 }
 
@@ -38,23 +39,20 @@ body {
     border: 5px solid #C7D1C3;
 }
 
-.left-column {
-    flex: 1;
-    max-width: 350px;
-    text-align: left;
-}
 
 .profile-header {
     margin-bottom: 1.5rem;
+    position: relative;
 }
 
 .profile-pic {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 120px;
     height: 120px;
     border-radius: 50%;
     object-fit: cover;
-    border: 5px solid #C7D1C3;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     margin-bottom: 1rem;
 }
 
@@ -86,7 +84,7 @@ body {
 }
 
 .social-links img:hover {
-    transform: scale(1.1); 
+    transform: scale(1.1);
 }
 
 .bio {
@@ -94,4 +92,9 @@ body {
     font-family: 'Rea-Regular', sans-serif;
     line-height: 1.6;
     color: #4A4A4A;
+}
+
+.small-github img {
+    height: 25px;
+
 }
